--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,17 @@ otp_release:
   - 19.3
   - 20.0
 
+env:
+  - MIX_ENV=test
+
 matrix:
   exclude:
     - elixir: 1.3.0
       otp_release: 20.0
     - elixir: 1.3.2
       otp_release: 20.0
+
+script: mix coveralls.travis
 
 after_script:
   - MIX_ENV=docs mix deps.get
