Add running of credo to .travis.yml
Update codeclimate.yml and travis.yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,8 @@
-plugins:
+engines:
   credo:
     enabled: true
-    channel: "beta"
+    strict: true
+    all: true
+    #only: "warning"
+    #ignore: "readability"
+
