Update code climate config

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,8 +1,7 @@
-engines:
+plugins:
   credo:
     enabled: true
     strict: true
     all: true
-    #only: "warning"
-    #ignore: "readability"
+    only: "warning"
 
