--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
       otp_release: 21.0
     - elixir: 1.5.1
       otp_release: 21.0
+    - elixir: 1.8.1
+      otp_release: 19.3
 
 script:
   - mix credo
