--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: elixir
 
 elixir:
-  - 1.7.2
+  - 1.7.4
   - 1.8.1
   - 1.9.4
   - 1.10.2
+  - 1.11.1
 
 otp_release:
   - 19.3
   - 20.0
   - 21.0
-  - 22.0
+  - 22.1
+  - 23.1
 
 env:
   - MIX_ENV=test
@@ -19,11 +21,19 @@ matrix:
   exclude:
     - elixir: 1.8.1
       otp_release: 19.3
+    - elixir: 1.8.1
+      otp_release: 23.1
     - elixir: 1.9.4
       otp_release: 19.3
+    - elixir: 1.9.4
+      otp_release: 23.1
     - elixir: 1.10.2
       otp_release: 19.3
     - elixir: 1.10.2
+      otp_release: 20.0
+    - elixir: 1.11.1
+      otp_release: 19.3
+    - elixir: 1.11.1
       otp_release: 20.0
 
 script:
