--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: elixir
 
 elixir:
   - 1.7.4
-  - 1.8.1
+  - 1.8.2
   - 1.9.4
   - 1.10.2
   - 1.11.1
@@ -19,9 +19,11 @@ env:
 
 matrix:
   exclude:
-    - elixir: 1.8.1
+    - elixir: 1.7.4
+      otp_release: 23.1
+    - elixir: 1.8.2
       otp_release: 19.3
-    - elixir: 1.8.1
+    - elixir: 1.8.2
       otp_release: 23.1
     - elixir: 1.9.4
       otp_release: 19.3
