Drop support for Elixir 1.7 and 1.8

--- a/.github/workflows/digger_ci.yml
+++ b/.github/workflows/digger_ci.yml
@@ -15,12 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        elixir: [1.14.x, 1.13.x, 1.12.x, 1.11.x, 1.10.x, 1.9.x, 1.8.x, 1.7.x]
+        elixir: [1.14.x, 1.13.x, 1.12.x, 1.11.x, 1.10.x, 1.9.x]
         include:
-          - elixir: 1.7.x
-            otp: 20.x
-          - elixir: 1.8.x
-            otp: 20.x
           - elixir: 1.9.x
             otp: 21.x
           - elixir: 1.10.x
