--- a/.github/workflows/digger_ci.yml
+++ b/.github/workflows/digger_ci.yml
@@ -15,28 +15,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        elixir: [1.14.x, 1.13.x, 1.12.x, 1.11.x, 1.10.x, 1.9.x]
         include:
-          - elixir: 1.9.x
-            otp: 21.x
-          - elixir: 1.10.x
-            otp: 22.x
-          - elixir: 1.11.x
-            otp: 23.x
-          - elixir: 1.12.x
-            otp: 24.x
-          - elixir: 1.13.x
-            otp: 25.x
-          - elixir: 1.14.x
-            otp: 25.x
+          - pair:
+              elixir: 1.13.x
+              otp: 24.3
+          - pair:
+              elixir: 1.14.x
+              otp: 25.3
+          - pair:
+              elixir: 1.15.6
+              otp: 26.0.2
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Elixir
       uses: erlef/setup-beam@v1
       with:
-        otp-version: ${{ matrix.otp }}
-        elixir-version: ${{ matrix.elixir }}
+        otp-version: ${{ matrix.pair.otp }}
+        elixir-version: ${{ matrix.pair.elixir }}
     - name: Restore dependencies cache
       uses: actions/cache@v3
       with:
@@ -44,6 +40,8 @@ jobs:
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}-${{ matrix.otp }}
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
-      run: mix deps.get --force
+      run: mix deps.get --only test
+    - name: Compile deps
+      run: mix deps.compile
     - name: Run tests
       run: mix test
